[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "qsim"
author = "Joseph Weston"
author-email = "joseph@weston.cloud"
home-page = "https://github.com/jbweston/qsim"
requires-python=">=3.11"
description-file="README.md"
keywords = "quantum simulator"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.11",
]
requires = [
    "numpy",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
    "pytest-ruff",
    "pytest-mypy",
    "pytest-black",
    "hypothesis[numpy]",
    "tox",
    "ruff",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "m2r",  # markdown support
    "sphinxcontrib.apidoc",  # run sphinx-apidoc when building docs
]
dev = [
    "flit",
    "pre-commit",
    "bump2version",
]
